--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dhcpleases.js",
   "dependencies": {
     "express": "~3.3.7",
-    "moment": "~2.1.0"
+    "moment": "~2.1.0",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "cli-table": "~0.2.0",
