switch to fs.notify (nom install)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "~3.3.7",
     "moment": "~2.1.0",
     "socket.io": "~0.9.16",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "fs.notify": "0.0.4"
   },
   "devDependencies": {
     "cli-table": "~0.2.0",
